Desktop toolbar visible when on mobile bug fixed

--- a/williamaucs-com/src/app/shared/navbar/navbar.component.css
+++ b/williamaucs-com/src/app/shared/navbar/navbar.component.css
@@ -51,7 +51,7 @@ mat-sidenav-container {
 /* Hand-held mobile devices  */
 
 @media (max-width: 625px) {
-    .nav-desktop {
+    #nav-desktop {
         display: none;
     }
     mat-toolbar {
